# curve2vec

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  test.py
curve2vec/: __init__.py
curve2vec/embeddings/: fourier.py
src/curve2vec/embeddings/: fourier.py
src/curve2vec/utils/: data.py  visualization.py
tests/: test_embeddings.py  test_utils.py
